[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "async_task_queue"
dist-name = "async-task-queue"
author = "Celestine Kao"
author-email = "ckao@narrativescience.com"
home-page = "https://github.com/NarrativeScience/async-task-queue"
license = "BSD-3-Clause"
description-file = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.6,<4"
keywords = "asyncio, async queue"

[tool.flit.sdist]
include = ["LICENSE.md"]
exclude = ["tests/"]
